[package]
name = "hdc2080"
version = "0.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/hdc2080-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the HDC2080 low-power humidity and temperature digital sensor. Compatible with HDC2080, HDC2010 and HDC2021."
readme = "README.md"
keywords = ["humidity", "temperature", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/hdc2080-rs"
documentation = "https://docs.rs/hdc2080"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[badges]
travis-ci = { repository = "eldruin/hdc2080-rs", branch = "master" }
coveralls = { repository = "eldruin/hdc2080-rs", branch = "master", service = "github" }

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true
